# C-v2x

./: .gitignore  README.md  hola
gr-cv2x/: CMakeLists.txt
gr-cv2x/cmake/Modules/: cv2xConfig.cmake
gr-cv2x/docs/: README.cv2x
gr-cv2x/docs/doxygen/: Doxyfile.in
gr-cv2x/examples/: normal.grc  ruido.grc  simetria.grc  sync.grc  top_block.py  v2xfi.grc  v2xphysicaluplink.grc  v2xphysicaluplink.txt
gr-cv2x/examples/HierBlocks/: lte_cp_ffo_sync_hier.grc  lte_psss_time_sim_hier.grc  lte_ssss_sync_hier.grc  ltev_pss_sync.grc  top_block.py  (+6 more)
gr-cv2x/grc/: CMakeLists.txt  cv2x_decimator_cc.xml  cv2x_extract_subcarriers_vcvc.xml  cv2x_lte_cyclic_prefixer_vcc.xml  cv2x_ofdm_cyclic_prefixer.xml  cv2x_pss_calculator_vcm.xml  cv2x_pss_symbol_selector_cvc.xml  cv2x_pss_tagger_cc.xml  cv2x_pss_time_sim.xml  cv2x_psss_time_sync.xml  cv2x_rough_symbol_sync_cc.xml  cv2x_slss_generator.xml  cv2x_ssss_calculator_vcm.xml  cv2x_ssss_symbol_selector_cvc.xml  cv2x_ssss_tagger_cc.xml  cv2x_subframe_to_symbol_vector.xml  cv2x_sync_frequency_c.xml
gr-cv2x/lib/: 3GPP_36213_Table7_1_7_2_1_1.cpp  3GPP_36213_Table8_6_1_1.cpp  CMakeLists.txt  LTE_Constants.cpp  ResourcePool.cpp  SL_V2XCommunication.cpp  SL_V2XCommunication.hpp  SL_V2XUEConfig.cpp  SL_V2XUEConfig.hpp  a.out  config.cpp  correlator.cc  correlator.h  decimator_cc_impl.cc  decimator_cc_impl.h  extract_subcarriers_vcvc_impl.cc  extract_subcarriers_vcvc_impl.h  lte_cyclic_prefixer_vcc_impl.cc  lte_cyclic_prefixer_vcc_impl.h  makefile  ofdm_cyclic_prefixer_impl.cc  ofdm_cyclic_prefixer_impl.h  plantilla  pss_calculator_vcm_impl.cc  pss_calculator_vcm_impl.h  pss_symbol_selector_cvc_impl.cc  pss_symbol_selector_cvc_impl.h  pss_tagger_cc_impl.cc  pss_tagger_cc_impl.h  pss_time_sim_impl.cc  pss_time_sim_impl.h  psss_time_sync_impl.cc  psss_time_sync_impl.h  qa_cv2x.cc  qa_cv2x.h  rough_symbol_sync_cc_impl.cc  rough_symbol_sync_cc_impl.h  slss_generator_impl.cc  slss_generator_impl.h  ssss_calculator_vcm_impl.cc  (+12 more)
gr-cv2x/python/: CMakeLists.txt  __init__.py  qa_decimator_cc.py  qa_extract_subcarriers_vcvc.py  qa_lte_cyclic_prefixer_vcc.py  qa_ofdm_cyclic_prefixer.py  qa_pss_calculator_vcm.py  qa_pss_symbol_selector_cvc.py  qa_pss_tagger_cc.py  qa_pss_time_sim.py  qa_psss_time_sync.py  qa_slss_generator.py  qa_ssss_calculator_vcm.py  qa_ssss_symbol_selector_cvc.py  qa_ssss_tagger_cc.py  qa_subframe_to_symbol_vector.py  qa_sync_frequency_c.py
gr-cv2x/swig/: CMakeLists.txt  cv2x_swig.i
scripts/: 3GPP_36213_Table7_1_7_2_1_1.cpp  3GPP_36213_Table8_6_1_1.cpp  mat_to_c.m
(+40 files in other folders)
